--- a/UI/Test/HPVTWIResultPage.xaml
+++ b/UI/Test/HPVTWIResultPage.xaml
@@ -121,6 +121,8 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
 
@@ -139,13 +141,16 @@
                     <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Left">References:</TextBlock>
                     <TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="8" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=PanelSetOrder.References}"  TextWrapping="Wrap"/>
 
-                    <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="9" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
-                    
-                    <TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="10" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="9" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Left">ASR Comment:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="10" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=PanelSetOrder.ASRComment}"  TextWrapping="Wrap"/>
 
-					<Grid Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2">
+                    <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="11" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
+                    
+                    <TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="12" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
+
+					<Grid Grid.Column="0" Grid.Row="13" Grid.ColumnSpan="2">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="Auto"></ColumnDefinition>
 							<ColumnDefinition Width="*"></ColumnDefinition>
