--- a/UI/Client/ProviderEntry.xaml
+++ b/UI/Client/ProviderEntry.xaml
@@ -39,7 +39,7 @@
                     <TextBox Grid.Column="1" Grid.Row="2" Name="TextBoxFirstName" Text="{Binding Path=Physician.FirstName}" Margin="2,2,2,2" KeyUp="TextBoxNames_KeyUp"></TextBox>					
 
 					<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Middle Initial:</TextBlock>
-					<TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=Physician.MiddleInitial}" Margin="2,2,2,2"></TextBox>					
+                    <TextBox Grid.Column="1" Grid.Row="3" Name="TextBoxMiddleInitial" Text="{Binding Path=Physician.MiddleInitial}" Margin="2,2,2,2" KeyUp="TextBoxNames_KeyUp"></TextBox>					
 
 					<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Display Name:</TextBlock>
                     <TextBox Grid.Column="1" Grid.Row="4" Name="TextBoxDisplayName" Text="{Binding Path=Physician.DisplayName}" Margin="2,2,2,2"></TextBox>
