--- a/UI/Client/ClientSupplyOrderListDialog.xaml
+++ b/UI/Client/ClientSupplyOrderListDialog.xaml
@@ -11,20 +11,31 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <ListView Grid.Column="0" Grid.Row="0" Name="ListViewClientSupplyOrders" Margin="10" ItemsSource="{Binding Path=ClientSupplyOrderCollection}" MouseDoubleClick="ListViewClientSupplyOrders_MouseDoubleClick">
+
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
+            <TextBlock Margin="10" Text="Order List:" />
+            <ComboBox Name="ComboBoxOrderSelection" Margin="10" Width="90" SelectionChanged="ComboBoxOrderSelection_SelectionChanged">
+                <ComboBoxItem>All</ComboBoxItem>
+                <ComboBoxItem>Not Final</ComboBoxItem>
+            </ComboBox>
+        </StackPanel>
+        
+        <ListView Grid.Column="0" Grid.Row="1" Name="ListViewClientSupplyOrders" Margin="10" ItemsSource="{Binding Path=ClientSupplyOrderCollection}" MouseDoubleClick="ListViewClientSupplyOrders_MouseDoubleClick">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Client Name" DisplayMemberBinding="{Binding Path=ClientName}" Width="300" />
                     <GridViewColumn Header="Order Date" DisplayMemberBinding="{Binding Path=OrderDate, Converter={StaticResource ShortDateConverter}}" Width="150" />
                     <GridViewColumn Header="Date Sent Out" DisplayMemberBinding="{Binding Path=DateOrderSent, Converter={StaticResource ShortDateConverter}}" Width="150" />
-                    <GridViewColumn Header="Final" DisplayMemberBinding="{Binding Path=OrderFinal}" Width="100" />
+                    <GridViewColumn Header="Ordered By" DisplayMemberBinding="{Binding Path=OrderTakenBy}" Width="150" />
+                    <GridViewColumn Header="Filled By" DisplayMemberBinding="{Binding Path=OrderFilledBy}" Width="150" />
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Grid.Column="0" Grid.Row="1" Width="90" Height="30" Click="ButtonDelete_Click" HorizontalAlignment="Left" Margin="2,2,2,2">Delete</Button>
-        <Button Grid.Column="0" Grid.Row="1" Width="90" Height="30" Click="ButtonClose_Click" HorizontalAlignment="Right" Margin="2,2,2,2">Close</Button>
+        <Button Grid.Column="0" Grid.Row="2" Width="90" Height="30" Click="ButtonDelete_Click" HorizontalAlignment="Left" Margin="2,2,2,2">Delete</Button>
+        <Button Grid.Column="0" Grid.Row="2" Width="90" Height="30" Click="ButtonClose_Click" HorizontalAlignment="Right" Margin="2,2,2,2">Close</Button>
     </Grid>
 </Window>
