--- a/UI/Gross/ScanContainerPage.xaml
+++ b/UI/Gross/ScanContainerPage.xaml
@@ -29,6 +29,7 @@
 
         <StackPanel Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top">
             <Button Margin="5" Height="60" Width="200"  Content="Sign Out" Click="ButtonSignOut_Click" />
+            <Button Margin="5" Height="60" Width="200"  Content="Scan Aliquot" Click="ButtonScanAliquot_Click" />
             <Button Margin="5" Height="60" Width="200"  Content="Barcode will not scan" Click="ButtonBarcodeDidNotScan_Click" />
         </StackPanel>
 		
