--- a/UI/Surgical/PathologistSignoutAuditMessagePage.xaml
+++ b/UI/Surgical/PathologistSignoutAuditMessagePage.xaml
@@ -7,13 +7,18 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" HorizontalAlignment="Stretch" Text="{Binding Path=AuditResult.Message}" />
+        <ListView Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=AuditMessages}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Audit Message" DisplayMemberBinding="{Binding}" />
+                </GridView>
 
-        <Button Grid.Column="0" Grid.Row="3" Width="100" Height="40" HorizontalAlignment="Left" Margin="5,5,5,5" Click="ButtonBack_Click">&lt; Back</Button>
-        <Button Grid.Column="0" Grid.Row="3" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
+            </ListView.View>
+        </ListView>
+
+        <Button Grid.Column="0" Grid.Row="1" Width="100" Height="40" HorizontalAlignment="Left" Margin="5,5,5,5" Click="ButtonBack_Click">&lt; Back</Button>
+        <Button Grid.Column="0" Grid.Row="1" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
     </Grid>
 </UserControl>
