--- a/UI/Cytology/CytologyUnsatLetterDialog.xaml
+++ b/UI/Cytology/CytologyUnsatLetterDialog.xaml
@@ -20,10 +20,10 @@
 		</Grid.RowDefinitions>
 
 		<TextBlock Grid.Column="0" Grid.Row="0" Margin="5" HorizontalAlignment="Right">Start Date:</TextBlock>
-		<TextBox Name="TextBoxStartDate" Grid.Column="1" Grid.Row="0" Margin="5" HorizontalAlignment="Left" Text="{Binding Path=StartDate, Converter={StaticResource ShortDateConverter}}" />
+		<TextBox Name="TextBoxStartDate" Grid.Column="1" Grid.Row="0" Margin="5" HorizontalAlignment="Stretch" Text="{Binding Path=StartDate, Converter={StaticResource ShortDateConverter}}" />
 
 		<TextBlock Grid.Column="0" Grid.Row="1" Margin="5" HorizontalAlignment="Right">End Date:</TextBlock>
-		<TextBox Name="TextBoxEndDate" Grid.Column="1" Grid.Row="1" Margin="5" HorizontalAlignment="Left" Text="{Binding Path=EndDate, Converter={StaticResource ShortDateConverter}}" />
+		<TextBox Name="TextBoxEndDate" Grid.Column="1" Grid.Row="1" Margin="5" HorizontalAlignment="Stretch" Text="{Binding Path=EndDate, Converter={StaticResource ShortDateConverter}}" />
 
 		<Button Grid.Column="0" Grid.Row="2" Margin="5" Height="30" Width="120" Click="ButtonOpenCaseCount_Click" HorizontalAlignment="Center">
 			<TextBlock>Open Case Count</TextBlock>
