--- a/UI/PantherOrdersDialog.xaml
+++ b/UI/PantherOrdersDialog.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -17,11 +18,16 @@
         </Grid.RowDefinitions>
 
 
-        <ComboBox Name="ComboBoxListType" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch">
+        <ComboBox Name="ComboBoxListType" Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" SelectedValuePath="Content">
             <ComboBoxItem IsSelected="True">Not Aliquoted</ComboBoxItem>
+            <ComboBoxItem>Not Accepted</ComboBoxItem>
+            <ComboBoxItem>Not Final</ComboBoxItem>
+            <ComboBoxItem>Final</ComboBoxItem>
         </ComboBox>
 
-        <ListView Grid.Column="0" Grid.Row="1" Name="ListViewPantherOrders" Margin="2,2,2,2" ItemsSource="{Binding Path=PantherOrderCollection}">
+        <Button Grid.Column="1" Grid.Row="0" Click="ButtonSearch_Click" Margin="2,2,2,2" Width="100">Search</Button>
+        
+        <ListView Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Name="ListViewPantherOrders" Margin="2,2,2,2" ItemsSource="{Binding Path=PantherOrderList}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Report No" DisplayMemberBinding="{Binding Path=ReportNo}" Width="100" />
@@ -29,10 +35,11 @@
                     <GridViewColumn Header="Test" DisplayMemberBinding="{Binding Path=PanelSetName}" Width="150" />
                     <GridViewColumn Header="Accepted" DisplayMemberBinding="{Binding Path=AcceptedTime, Converter={StaticResource MilitaryDateTimeConverter}}" Width="150" />
                     <GridViewColumn Header="Finaled" DisplayMemberBinding="{Binding Path=FinalTime, Converter={StaticResource MilitaryDateTimeConverter}}" Width="150" />
+                    <GridViewColumn Header="Result" DisplayMemberBinding="{Binding Path=ResultCode}" Width="150" />
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Grid.Column="0" Grid.Row="2" Width="90" Height="30" Click="ButtonPrint_Click" HorizontalAlignment="Left" Margin="2,2,2,2">Print</Button>
+        <Button Grid.Column="1" Grid.Row="2" Width="90" Height="30" Click="ButtonPrint_Click" HorizontalAlignment="Left" Margin="2,2,2,2">Print</Button>
         <Button Grid.Column="0" Grid.Row="2" Width="90" Height="30" Click="ButtonClose_Click" HorizontalAlignment="Right" Margin="2,2,2,2">Close</Button>
     </Grid>
 </Window>
