--- a/UI/Surgical/LynchSyndromeSignoutPage.xaml
+++ b/UI/Surgical/LynchSyndromeSignoutPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Surgical.CarcinomaTestingSignoutPage"
+﻿<UserControl x:Class="YellowstonePathology.UI.Surgical.LynchSyndromeSignoutPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -16,7 +16,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" FontSize="14" Margin="2,2,2,2" HorizontalAlignment="Stretch" FontWeight="Bold" Text="{Binding Path=CarcinomaMeasure.Header}"/>
+        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="center" FontWeight="Bold" Text="Lynch Syndrome is suggested"/>
 
         <ListView Name="ListBoxTestOrders" Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Stretch"
                       ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}">
@@ -31,6 +31,7 @@
         </ListView>
 
         <Button Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Click="ButtonBack_Click" Height="50" Width="100" HorizontalAlignment="Left">&lt; Back</Button>
+        <Button Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Click="ButtonOrder_Click" Height="50" Width="100" HorizontalAlignment="Center">Order</Button>
         <Button Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Click="ButtonNext_Click" Height="50" Width="100" HorizontalAlignment="Right">Next ></Button>
 
     </Grid>
