--- a/UI/Surgical/PqrsSignoutPage.xaml
+++ b/UI/Surgical/PqrsSignoutPage.xaml
@@ -1,11 +1,10 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Surgical.PqrsSignoutPage"
+﻿<UserControl x:Class="YellowstonePathology.UI.Surgical.PQRSSignoutPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:YellowstonePathology.UI.Surgical"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             FontSize="14">
     <Grid Margin="5,5,5,5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
