--- a/UI/Surgical/PqrsSignoutPage.xaml
+++ b/UI/Surgical/PqrsSignoutPage.xaml
@@ -14,6 +14,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row="0" FontSize="14" Margin="2,2,2,2" FontWeight="Bold" Text="{Binding Path=PQRSMeasure.Header}"/>
@@ -45,8 +46,9 @@
         <CheckBox Name="CheckBoxNotApplicable" Grid.Column="0" Grid.Row="2" Margin="5,2,2,2" VerticalAlignment="Center" Content="PQRS is not applicable for this case."
 				Checked="CheckBoxNotApplicable_Checked"/>
 
-            <Button Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Click="ButtonBack_Click" Height="50" Width="100" HorizontalAlignment="Left">&lt; Back</Button>
-            <Button Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Click="ButtonNext_Click" Height="50" Width="100" HorizontalAlignment="Right">Next ></Button>
+        <Button Grid.Column="0" Grid.Row="4" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Left" Click="ButtonBack_Click" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
+        <Button Grid.Column="0" Grid.Row="4" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Right" Click="ButtonNext_Click" Visibility="{Binding Path=NextButtonVisibility}">Next ></Button>
+        <Button Grid.Column="0" Grid.Row="4" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Right" Click="ButtonClose_Click" Visibility="{Binding Path=CloseButtonVisibility}">Close</Button>
 
     </Grid>
 </UserControl>
